# mcat-speedrun

./: .gitignore  README.md  package.json
.cursor/rules/: stripe-inspired-ui.mdc
docs/: mcat-ablation.md  mcat-ai-note.md  mcat-calibration.md  mcat-mastery-query-note.md  mcat-models.md  mcat-overview.md  mcat-performance-eval.md  mcat-results.md  mcat-sync.md
ios/: .gitignore  build-ffi.sh  run-sim.sh
ios/MCATSpeedrun/: GoogleService-Info.plist  Info.plist  project.yml
ios/MCATSpeedrun/Resources/: content_pack_v1.json  openai_key.example.txt  taxonomy.json
ios/MCATSpeedrun/Sources/: Engine.swift  MCATSpeedrunApp.swift  RootView.swift
ios/mcat-ffi/: Cargo.toml
ios/mcat-ffi/include/: mcat_ffi.h  module.modulemap
ios/mcat-ffi/src/: lib.rs
proto/anki/: mastery.proto
pylib/anki/mcat/: __init__.py  ai.py  content.py  firebase.json  firebase_sync.py  planner.py  questions.py  schema.py  scoring.py  store.py  taxonomy.py
pylib/tests/: test_mcat.py
qt/aqt/: main.py  mediasrv.py  webview.py
qt/aqt/mcat/: __init__.py  endpoints.py  screens.py
rslib/proto/: python.rs
rslib/proto/src/: lib.rs
rslib/src/: lib.rs
rslib/src/mastery/: mod.rs  service.rs  tests.rs
rslib/src/mcat_core/: api.rs  fsrs_sched.rs  mod.rs  scoring.rs  tests.rs
tools/mcat/: ablation.py  benchmark.py  calibration.py  eval_cars.py  eval_coach.py  eval_injection.py  eval_reasoning.py  leakage_check.py  paraphrase_test.py  perf_eval.py  validate_content.py
tools/mcat/eval_data/: cars_gold.json  coach_gold.json  injection_gold.json  reasoning_gold.json
(+61 files in other folders)
